Minor updates to index page

--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <!--  <meta name="description"-->
-    <!--        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">-->
-    <!--  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">-->
-    <!--  <meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <meta name="description"
+          content="Learn a personalized generative prior and apply it enhance and edit photos of yourself.">
+    <meta name="keywords" content="MyStyle, Personalization, StyleGAN">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MyStyle</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>-->
-    <!--  <script>-->
-    <!--    window.dataLayer = window.dataLayer || [];-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-89YPC48M36"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    <!--    function gtag() {-->
-    <!--      dataLayer.push(arguments);-->
-    <!--    }-->
+        function gtag() {
+            dataLayer.push(arguments);
+        }
 
-    <!--    gtag('js', new Date());-->
+        gtag('js', new Date());
 
-    <!--    gtag('config', 'G-PYVRSFMDRL');-->
-
-
-    <!--  </script>-->
+        gtag('config', 'G-89YPC48M36');
+    </script>
 
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
           rel="stylesheet">
@@ -42,46 +40,6 @@
     <script src="./static/js/index.js"></script>
 </head>
 <body>
-
-<!--<nav class="navbar" role="navigation" aria-label="main navigation">-->
-<!--  <div class="navbar-brand">-->
-<!--    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">-->
-<!--      <span aria-hidden="true"></span>-->
-<!--      <span aria-hidden="true"></span>-->
-<!--      <span aria-hidden="true"></span>-->
-<!--    </a>-->
-<!--  </div>-->
-<!--  <div class="navbar-menu">-->
-<!--    <div class="navbar-start" style="flex-grow: 1; justify-content: center;">-->
-<!--      <a class="navbar-item" href="https://keunhong.com">-->
-<!--      <span class="icon">-->
-<!--          <i class="fas fa-home"></i>-->
-<!--      </span>-->
-<!--      </a>-->
-
-<!--      <div class="navbar-item has-dropdown is-hoverable">-->
-<!--        <a class="navbar-link">-->
-<!--          More Research-->
-<!--        </a>-->
-<!--        <div class="navbar-dropdown">-->
-<!--          <a class="navbar-item" href="https://hypernerf.github.io">-->
-<!--            HyperNeRF-->
-<!--          </a>-->
-<!--          <a class="navbar-item" href="https://nerfies.github.io">-->
-<!--            Nerfies-->
-<!--          </a>-->
-<!--          <a class="navbar-item" href="https://latentfusion.github.io">-->
-<!--            LatentFusion-->
-<!--          </a>-->
-<!--          <a class="navbar-item" href="https://photoshape.github.io">-->
-<!--            PhotoShape-->
-<!--          </a>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-
-<!--  </div>-->
-<!--</nav>-->
 
 
 <section class="hero">
@@ -129,9 +87,9 @@
                             <span class="link-block">
                 <a href="https://arxiv.org/abs/XXX"
                    class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                  </span>
+                    <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                    </span>
                   <span>Paper</span>
                 </a>
               </span>
@@ -139,7 +97,7 @@
                 <a href="supp.html"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fas fa-link"></i>
                   </span>
                   <span>Supplementary</span>
                 </a>
@@ -644,7 +602,7 @@
                         Commons Attribution-ShareAlike 4.0 International License</a>.
                     </p>
                     <p>
-                        Website source code based on the <a href="https://nerfies.github.io/"> Nerfies</a> project page.
+                        This website's source code is based on the <a href="https://nerfies.github.io/"> Nerfies</a> project page.
                         If you want to reuse their <a
                             href="https://github.com/nerfies/nerfies.github.io">source code</a>, please credit them
                         appropriately.
