Post arXiv changes - url and citation

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-J8WL4MPNGZ"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag('config', 'G-J8WL4MPNGZ');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-J8WL4MPNGZ');
     </script>
 
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
@@ -84,7 +88,7 @@
                         <div class="publication-links">
                             <!-- PDF Link. -->
                             <span class="link-block">
-                <a href="https://arxiv.org/abs/XXX"
+                <a href="https://arxiv.org/abs/2203.17272"
                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -101,15 +105,7 @@
                   <span>Supplementary</span>
                 </a>
               </span>
-                            <!--              <span class="link-block">-->
-                            <!--                <a href="https://arxiv.org/abs/XXX"-->
-                            <!--                   class="external-link button is-normal is-rounded is-dark">-->
-                            <!--                  <span class="icon">-->
-                            <!--                      <i class="ai ai-arxiv"></i>-->
-                            <!--                  </span>-->
-                            <!--                  <span>Paper</span>-->
-                            <!--                </a>-->
-                            <!--              </span>-->
+
                             <!-- Video Link. -->
                             <span class="link-block">
                 <a href="https://youtu.be/QvOdQR3tlOc"
@@ -130,15 +126,6 @@
                   <span>Code (Soon)</span>
                   </a>
               </span>
-                            <!-- Dataset Link. -->
-                            <!--              <span class="link-block">-->
-                            <!--                <a href="https://github.com/google/nerfies/releases/tag/0.1"-->
-                            <!--                   class="external-link button is-normal is-rounded is-dark">-->
-                            <!--                  <span class="icon">-->
-                            <!--                      <i class="far fa-images"></i>-->
-                            <!--                  </span>-->
-                            <!--                  <span>Data</span>-->
-                            <!--                  </a>-->
                         </div>
 
                     </div>
@@ -598,24 +585,25 @@
     </div>
 </section>
 
-<!--<section class="section" id="BibTeX">-->
-<!--    <div class="container is-max-desktop content">-->
-<!--        <h2 class="title">BibTeX</h2>-->
-<!--        <pre><code>@article{park2021nerfies,-->
-<!--  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},-->
-<!--  title     = {Nerfies: Deformable Neural Radiance Fields},-->
-<!--  journal   = {ICCV},-->
-<!--  year      = {2021},-->
-<!--}</code></pre>-->
-<!--    </div>-->
-<!--</section>-->
+<section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+        <h2 class="title">BibTeX</h2>
+        <pre><code>@article{nitzan2022mystyle,
+  author = {Nitzan, Yotam and Aberman, Kfir and He, Qiurui and Liba, Orly and Yarom, Michal and Gandelsman, Yossi and Mosseri, Inbar and Pritch, Yael and Cohen-or, Daniel},
+  title = {MyStyle: A Personalized Generative Prior},
+  publisher = {arXiv},
+  year = {2022},
+}
+</code></pre>
+    </div>
+</section>
 
 
 <footer class="footer">
     <div class="container">
         <div class="content has-text-centered">
             <a class="icon-link"
-               href="">
+               href="https://arxiv.org/abs/2203.17272">
                 <i class="fas fa-file-pdf"></i>
             </a>
             <a class="icon-link" href="" class="external-link" disabled>
