update video link

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                             <!-- Video Link. -->
                             <span class="link-block">
-                <a href="https://youtu.be/QvOdQR3tlOc"
+                <a href="https://www.youtube.com/watch?v=axWo_9Gt47o"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -189,8 +189,7 @@
             <div class="column is-four-fifths">
                 <h2 class="title is-3">Video</h2>
                 <div class="publication-video">
-                    <iframe src="https://www.youtube.com/embed/QvOdQR3tlOc?rel=0&amp;showinfo=0"
-                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/axWo_9Gt47o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
