Update video and cite

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                             <!-- Video Link. -->
                             <span class="link-block">
-                <a href="https://youtu.be/QvOdQR3tlOc"
+                <a href="https://youtu.be/axWo_9Gt47o"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -189,7 +189,7 @@
             <div class="column is-four-fifths">
                 <h2 class="title is-3">Video</h2>
                 <div class="publication-video">
-                    <iframe src="https://www.youtube.com/embed/QvOdQR3tlOc?rel=0&amp;showinfo=0"
+                    <iframe src="https://www.youtube.com/embed/axWo_9Gt47o?rel=0&amp;showinfo=0"
                             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
@@ -589,10 +589,10 @@
     <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
         <pre><code>@article{nitzan2022mystyle,
-  author = {Nitzan, Yotam and Aberman, Kfir and He, Qiurui and Liba, Orly and Yarom, Michal and Gandelsman, Yossi and Mosseri, Inbar and Pritch, Yael and Cohen-or, Daniel},
-  title = {MyStyle: A Personalized Generative Prior},
-  publisher = {arXiv},
-  year = {2022},
+  title={MyStyle: A Personalized Generative Prior},
+  author={Nitzan, Yotam and Aberman, Kfir and He, Qiurui and Liba, Orly and Yarom, Michal and Gandelsman, Yossi and Mosseri, Inbar and Pritch, Yael and Cohen-Or, Daniel},
+  journal={arXiv preprint arXiv:2203.17272},
+  year={2022}
 }
 </code></pre>
     </div>
