Fix typo from Barack to Michelle Obama

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                             <div class="carousel-content">
                                 <img src="static/images/inpainting/michelle_obama.jpg"
                                      alt="Michelle Obama"/>
-                                <h2 class="subtitle has-text-centered">Barack Obama</h2>
+                                <h2 class="subtitle has-text-centered">Michelle Obama</h2>
                             </div>
                         </div>
                         <div class="item item-inpainting">
